# pkg/api/projects_grpc.pb.go
@@ -1,0 +1,257 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v4.23.3
+// source: api/proto/projects.proto
+
+package api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	Projects_CreateProject_FullMethodName      = "/projects.Projects/CreateProject"
+	Projects_GetProjectByTeamId_FullMethodName = "/projects.Projects/GetProjectByTeamId"
+	Projects_DeleteProject_FullMethodName      = "/projects.Projects/DeleteProject"
+	Projects_UpdateProject_FullMethodName      = "/projects.Projects/UpdateProject"
+	Projects_GetProjectById_FullMethodName     = "/projects.Projects/GetProjectById"
+)
+
+// ProjectsClient is the client API for Projects service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ProjectsClient interface {
+	CreateProject(ctx context.Context, in *ProjectRequest, opts ...grpc.CallOption) (*ProjectIdReply, error)
+	GetProjectByTeamId(ctx context.Context, in *TeamIdRequest, opts ...grpc.CallOption) (*ProjectsReply, error)
+	DeleteProject(ctx context.Context, in *ProjectIdRequest, opts ...grpc.CallOption) (*ProjectIdReply, error)
+	UpdateProject(ctx context.Context, in *UpdateRequest, opts ...grpc.CallOption) (*ProjectIdReply, error)
+	GetProjectById(ctx context.Context, in *ProjectIdRequest, opts ...grpc.CallOption) (*ProjectReply, error)
+}
+
+type projectsClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewProjectsClient(cc grpc.ClientConnInterface) ProjectsClient {
+	return &projectsClient{cc}
+}
+
+func (c *projectsClient) CreateProject(ctx context.Context, in *ProjectRequest, opts ...grpc.CallOption) (*ProjectIdReply, error) {
+	out := new(ProjectIdReply)
+	err := c.cc.Invoke(ctx, Projects_CreateProject_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *projectsClient) GetProjectByTeamId(ctx context.Context, in *TeamIdRequest, opts ...grpc.CallOption) (*ProjectsReply, error) {
+	out := new(ProjectsReply)
+	err := c.cc.Invoke(ctx, Projects_GetProjectByTeamId_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *projectsClient) DeleteProject(ctx context.Context, in *ProjectIdRequest, opts ...grpc.CallOption) (*ProjectIdReply, error) {
+	out := new(ProjectIdReply)
+	err := c.cc.Invoke(ctx, Projects_DeleteProject_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *projectsClient) UpdateProject(ctx context.Context, in *UpdateRequest, opts ...grpc.CallOption) (*ProjectIdReply, error) {
+	out := new(ProjectIdReply)
+	err := c.cc.Invoke(ctx, Projects_UpdateProject_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *projectsClient) GetProjectById(ctx context.Context, in *ProjectIdRequest, opts ...grpc.CallOption) (*ProjectReply, error) {
+	out := new(ProjectReply)
+	err := c.cc.Invoke(ctx, Projects_GetProjectById_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ProjectsServer is the server API for Projects service.
+// All implementations must embed UnimplementedProjectsServer
+// for forward compatibility
+type ProjectsServer interface {
+	CreateProject(context.Context, *ProjectRequest) (*ProjectIdReply, error)
+	GetProjectByTeamId(context.Context, *TeamIdRequest) (*ProjectsReply, error)
+	DeleteProject(context.Context, *ProjectIdRequest) (*ProjectIdReply, error)
+	UpdateProject(context.Context, *UpdateRequest) (*ProjectIdReply, error)
+	GetProjectById(context.Context, *ProjectIdRequest) (*ProjectReply, error)
+	mustEmbedUnimplementedProjectsServer()
+}
+
+// UnimplementedProjectsServer must be embedded to have forward compatible implementations.
+type UnimplementedProjectsServer struct {
+}
+
+func (UnimplementedProjectsServer) CreateProject(context.Context, *ProjectRequest) (*ProjectIdReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateProject not implemented")
+}
+func (UnimplementedProjectsServer) GetProjectByTeamId(context.Context, *TeamIdRequest) (*ProjectsReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetProjectByTeamId not implemented")
+}
+func (UnimplementedProjectsServer) DeleteProject(context.Context, *ProjectIdRequest) (*ProjectIdReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteProject not implemented")
+}
+func (UnimplementedProjectsServer) UpdateProject(context.Context, *UpdateRequest) (*ProjectIdReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateProject not implemented")
+}
+func (UnimplementedProjectsServer) GetProjectById(context.Context, *ProjectIdRequest) (*ProjectReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetProjectById not implemented")
+}
+func (UnimplementedProjectsServer) mustEmbedUnimplementedProjectsServer() {}
+
+// UnsafeProjectsServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ProjectsServer will
+// result in compilation errors.
+type UnsafeProjectsServer interface {
+	mustEmbedUnimplementedProjectsServer()
+}
+
+func RegisterProjectsServer(s grpc.ServiceRegistrar, srv ProjectsServer) {
+	s.RegisterService(&Projects_ServiceDesc, srv)
+}
+
+func _Projects_CreateProject_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ProjectRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProjectsServer).CreateProject(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Projects_CreateProject_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProjectsServer).CreateProject(ctx, req.(*ProjectRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Projects_GetProjectByTeamId_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(TeamIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProjectsServer).GetProjectByTeamId(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Projects_GetProjectByTeamId_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProjectsServer).GetProjectByTeamId(ctx, req.(*TeamIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Projects_DeleteProject_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ProjectIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProjectsServer).DeleteProject(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Projects_DeleteProject_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProjectsServer).DeleteProject(ctx, req.(*ProjectIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Projects_UpdateProject_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProjectsServer).UpdateProject(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Projects_UpdateProject_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProjectsServer).UpdateProject(ctx, req.(*UpdateRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Projects_GetProjectById_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ProjectIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ProjectsServer).GetProjectById(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Projects_GetProjectById_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ProjectsServer).GetProjectById(ctx, req.(*ProjectIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Projects_ServiceDesc is the grpc.ServiceDesc for Projects service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Projects_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "projects.Projects",
+	HandlerType: (*ProjectsServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateProject",
+			Handler:    _Projects_CreateProject_Handler,
+		},
+		{
+			MethodName: "GetProjectByTeamId",
+			Handler:    _Projects_GetProjectByTeamId_Handler,
+		},
+		{
+			MethodName: "DeleteProject",
+			Handler:    _Projects_DeleteProject_Handler,
+		},
+		{
+			MethodName: "UpdateProject",
+			Handler:    _Projects_UpdateProject_Handler,
+		},
+		{
+			MethodName: "GetProjectById",
+			Handler:    _Projects_GetProjectById_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/proto/projects.proto",
+}
